PAL-684 refactor based on pr comments